--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,36 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".MainActivity">
-  <TextView
+
+  <EditText
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World!!!!!!"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    android:id="@+id/editText"
+    android:textSize="28sp"
+    android:hint="@string/hint_speed"
+    android:inputType="number"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    android:textColor="#33A5AA"
+    android:layout_marginStart="16dp"/>
+
+
+  <TextView
+    android:id="@+id/kmTextView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintStart_toStartOf="@+id/editText"
+    app:layout_constraintTop_toBottomOf="@+id/editText" />
+
+  <Button
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:text="@string/convert"
+    android:id="@+id/convertButton"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toBottomOf="@+id/kmTextView"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
