--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,5 +76,13 @@
     app:layout_constraintStart_toEndOf="@+id/two"
     app:layout_constraintTop_toBottomOf="@id/three"
     app:layout_constraintEnd_toEndOf="parent" />
+  <Button
+    android:id="@+id/clear"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/clear"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/two"
+    app:layout_constraintTop_toBottomOf="@id/six" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
