--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,54 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".MainActivity">
-  <TextView
-    android:id="@+id/helloWorld"
+
+  <EditText
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:id="@+id/account"
+    android:inputType="text"
+    android:hint="@string/account"
+    android:layout_marginTop="72dp"
+    android:layout_marginEnd="16dp"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_marginStart="16dp"/>
+
+  <EditText
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:id="@+id/passcode"
+    android:inputType="textPassword"
+    android:hint="@string/passcode"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginStart="16dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/account"/>
+
+  <Button
+    android:id="@+id/clear"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World!!!!!!"
+    android:layout_marginBottom="32dp"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    android:layout_marginStart="16dp"
+    app:layout_constraintStart_toStartOf="@+id/passcode"
+    android:text="@string/clear"
+    app:layout_constraintEnd_toStartOf="@+id/enter"/>
+
+  <Button
+    android:id="@+id/enter"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="32dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_marginEnd="16dp"
+    app:layout_constraintStart_toEndOf="@+id/clear"
+    app:layout_constraintEnd_toEndOf="@+id/passcode"
+    android:text="@string/enter" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
