--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
   <!-- Base application theme. -->
-  <style name="Theme.Lesson" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+  <style name="Theme.Lesson" parent="Theme.MaterialComponents.Light.NoActionBar">
     <!-- Primary brand color. -->
     <item name="colorPrimary">@color/primaryColor</item>
     <item name="colorPrimaryDark">@color/primaryDarkColor</item>
