--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,36 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".MainActivity">
-  <TextView
-    android:id="@+id/helloWorld"
+  <EditText
+    android:textSize="32sp"
+    android:id="@+id/number"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World!!!!!!"
+    android:inputType="number"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
+
+  <Button
+    android:text="@string/plus"
+    android:layout_marginTop="20dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/plus"
+    app:layout_constraintEnd_toStartOf="@+id/minus"
+    app:layout_constraintTop_toBottomOf="@+id/number"
+    app:layout_constraintStart_toStartOf="parent" />
+
+  <Button
+    android:text="@string/minus"
+    android:layout_marginTop="20dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/minus"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/number"
+    app:layout_constraintStart_toEndOf="@+id/plus" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
