--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,9 @@
     android:layout_marginTop="72dp"
     android:layout_marginEnd="16dp"
     app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/accountIcon"
     app:layout_constraintEnd_toEndOf="parent"
-    android:layout_marginStart="16dp"/>
+    android:layout_marginStart="10dp" />
 
   <EditText
     android:layout_width="0dp"
@@ -27,10 +27,10 @@
     android:hint="@string/passcode"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
-    android:layout_marginStart="16dp"
-    app:layout_constraintStart_toStartOf="parent"
+    android:layout_marginStart="10dp"
+    app:layout_constraintStart_toEndOf="@id/passcodeIcon"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/account"/>
+    app:layout_constraintTop_toBottomOf="@+id/account" />
 
 
   <Button
@@ -40,9 +40,9 @@
     android:layout_marginBottom="32dp"
     app:layout_constraintBottom_toBottomOf="parent"
     android:layout_marginStart="16dp"
-    app:layout_constraintStart_toStartOf="@+id/passcode"
+    app:layout_constraintStart_toStartOf="parent"
     android:text="@string/clear"
-    app:layout_constraintEnd_toStartOf="@+id/enter"/>
+    app:layout_constraintEnd_toStartOf="@+id/enter" />
 
   <Button
     android:id="@+id/enter"
@@ -52,8 +52,33 @@
     app:layout_constraintBottom_toBottomOf="parent"
     android:layout_marginEnd="16dp"
     app:layout_constraintStart_toEndOf="@+id/clear"
-    app:layout_constraintEnd_toEndOf="@+id/passcode"
+    app:layout_constraintEnd_toEndOf="parent"
     android:text="@string/enter" />
+
+  <!--  放icon方式：
+    點左邊drawable右鍵 / new / vector asset / clip art選自己喜歡的icon
+  -->
+  <ImageView
+    android:id="@+id/accountIcon"
+    android:layout_width="40dp"
+    android:layout_height="40dp"
+    app:layout_constraintTop_toTopOf="@+id/account"
+    app:layout_constraintBottom_toBottomOf="@+id/account"
+    app:layout_constraintStart_toStartOf="parent"
+    android:src="@drawable/ic_baseline_account_circle_24"
+    app:layout_constraintEnd_toStartOf="@+id/account"
+    android:layout_marginStart="16dp" />
+
+  <ImageView
+    android:id="@+id/passcodeIcon"
+    android:layout_width="40dp"
+    android:layout_height="40dp"
+    app:layout_constraintTop_toTopOf="@+id/passcode"
+    app:layout_constraintBottom_toBottomOf="@+id/passcode"
+    app:layout_constraintStart_toStartOf="parent"
+    android:src="@drawable/ic_baseline_lock_open_24"
+    app:layout_constraintEnd_toStartOf="@+id/passcode"
+    android:layout_marginStart="16dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
