--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,22 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".MainActivity">
-  <TextView
-    android:id="@+id/helloWorld"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Hello World!!!!!!"
+
+  <com.google.android.material.tabs.TabLayout
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_width="0dp"
+    android:layout_height="50dp"
+    android:id="@+id/tabLayout" />
+
+  <androidx.viewpager.widget.ViewPager
+    android:id="@+id/viewpager"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toBottomOf="@+id/tabLayout"
+    android:layout_width="0dp"
+    android:layout_height="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
