--- a/app/src/main/res/menu/winner_menu.xml
+++ b/app/src/main/res/menu/winner_menu.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright 2018, The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,11 +15,14 @@
   ~ limitations under the License.
   -->
 
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:orientation="vertical">
-
-</LinearLayout>
-
+    <item
+        android:id="@+id/share"
+        android:enabled="true"
+        android:icon="@drawable/share"
+        android:title="@string/share"
+        android:visible="true"
+        app:showAsAction="ifRoom" />
+</menu>
