--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <color name="primaryColor">#ffd180</color>
+  <color name="colorAccent">#7e53c5</color>
   <color name="primaryLightColor">#ffffb1</color>
   <color name="primaryDarkColor">#caa052</color>
   <color name="secondaryColor">#ffe0b2</color>
@@ -10,5 +11,8 @@
   <color name="secondaryTextColor">#000000</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+  <color name="youWinDark">#35A571</color>
+  <color name="youWinBackground">#B7F8C9</color>
+  <color name="gameOverBackground">#f8bbd0</color>
 </resources>
 
