--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,12 @@
   android:layout_height="match_parent"
   tools:context=".MainActivity">
 
-  <androidx.recyclerview.widget.RecyclerView
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    android:id="@+id/recyclerView"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent" />
+  <fragment
+    android:id="@+id/myNavHostFragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:navGraph="@navigation/navigation"
+    app:defaultNavHost="true"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
