--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,5 +7,13 @@
   <fragment
     android:id="@+id/affirmationFragment"
     android:name="com.kate.lesson.AffirmationFragment"
-    android:label="ViewFragment" />
+    android:label="ViewFragment">
+    <action
+      android:id="@+id/action_affirmationFragment_to_detailFragment"
+      app:destination="@id/detailFragment" />
+  </fragment>
+  <fragment
+    android:id="@+id/detailFragment"
+    android:name="com.kate.lesson.DetailFragment"
+    android:label="DetailFragment" />
 </navigation>
