--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -8,5 +8,17 @@
     android:id="@+id/flowerFragment"
     android:name="com.kate.lesson.FlowerListFragment"
     android:label="fragment_flower"
-    tools:layout="@layout/fragment_flower_list" />
+    tools:layout="@layout/fragment_flower_list">
+    <action
+      android:id="@+id/action_flowerFragment_to_detailFragment"
+      app:destination="@id/detailFragment" />
+  </fragment>
+  <fragment
+    android:id="@+id/detailFragment"
+    android:name="com.kate.lesson.DetailFragment"
+    android:label="DetailFragment">
+    <argument
+      android:name="flower"
+      app:argType="com.kate.lesson.Flower" />
+  </fragment>
 </navigation>
