--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,34 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".MainActivity">
+
   <TextView
-    android:id="@+id/helloWorld"
+    android:id="@+id/timer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World!!!!!!"
+    android:text="0"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
+
+  <Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/start"
+    android:text="start"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toStartOf="@+id/pause"
+    app:layout_constraintTop_toBottomOf="@+id/timer" />
+
+  <Button
+    android:id="@+id/pause"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="pause"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@id/start"
+    app:layout_constraintTop_toBottomOf="@id/timer" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
