--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
   <!-- Base application theme. -->
-  <style name="Theme.Lesson" parent="Theme.MaterialComponents.Light.NoActionBar">
+  <style name="Theme.Lesson" parent="Theme.MaterialComponents.Light.DarkActionBar">
     <!-- Primary brand color. -->
     <item name="colorPrimary">@color/primaryColor</item>
     <item name="colorPrimaryDark">@color/primaryDarkColor</item>
@@ -11,6 +11,7 @@
     <!-- Customize your theme here. -->
     <item name="colorError">@color/primaryTextColor</item>
     <item name="colorOnError">@color/primaryTextColor</item>
-    <item name="colorAccent">@color/primaryDarkColor</item>
+    <item name="colorAccent">@color/accentColor</item>
   </style>
+
 </resources>
