--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,37 @@
   android:layout_height="match_parent"
   tools:context=".MainActivity">
   <TextView
-    android:id="@+id/helloWorld"
-    android:layout_width="wrap_content"
+    android:background="#ff9999"
+    android:id="@+id/textView"
+    android:layout_margin="16dp"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:text="Hello World!!!!!!"
+    android:text=""
+    android:textSize="30sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
+
+  <EditText
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:id="@+id/editText"
+    android:textSize="20sp"
+    app:layout_constraintBottom_toTopOf="@+id/textView"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_margin="16dp" />
+
+  <Button
+    android:id="@+id/copy"
+    android:text="COPY"
+    android:textStyle="bold"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/textView"
+    android:layout_margin="16dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
