--- a/app/src/main/res/layout/holder_rank.xml
+++ b/app/src/main/res/layout/holder_rank.xml
@@ -1,25 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_margin="8dp"
   android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:padding="20dp">
+  android:layout_height="wrap_content">
 
-  <ImageView
-    android:id="@+id/photo"
-    android:layout_width="60dp"
-    android:layout_height="60dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
-
-  <TextView
-    android:id="@+id/name_text_view"
-    android:layout_width="wrap_content"
+  <androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginStart="16dp"
-    app:layout_constraintStart_toEndOf="@+id/photo"
-    app:layout_constraintTop_toTopOf="parent" />
+    android:padding="12dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+      android:textSize="32sp"
+      android:id="@+id/number"
+      android:minEms="1"
+      android:gravity="center"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      tools:text="1" />
+
+    <ImageView
+      android:layout_marginStart="18dp"
+      android:id="@+id/photo"
+      android:layout_width="60dp"
+      android:layout_height="60dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toEndOf="@id/number"
+      app:layout_constraintTop_toTopOf="parent"
+      tools:src="@tools:sample/avatars" />
+
+    <TextView
+      android:textSize="16sp"
+      android:id="@+id/name_text_view"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginEnd="16dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/photo"
+      app:layout_constraintEnd_toStartOf="@+id/point"
+      app:layout_constraintTop_toTopOf="parent"
+      tools:text="Mary" />
+
+    <TextView
+      android:textColor="@color/primaryDarkColor"
+      android:textSize="30sp"
+      android:id="@+id/point"
+      android:textStyle="bold|italic"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      tools:text="1234567" />
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
