--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,150 @@
   android:layout_height="match_parent"
   tools:context=".MainActivity">
   <TextView
-    android:id="@+id/helloWorld"
+    android:textSize="26sp"
+    android:layout_marginStart="30dp"
+    android:layout_marginTop="50dp"
+    android:id="@+id/title"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World!!!!!!"
-    app:layout_constraintBottom_toBottomOf="parent"
+    android:text="@string/title"
     app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
+
+  <TextView
+    android:textSize="20sp"
+    android:layout_marginTop="20dp"
+    android:text="@string/tall"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/tall"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/title"
+    android:layout_marginStart="30dp" />
+
+  <EditText
+    android:hint="cm"
+    android:gravity="center"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:ems="10"
+    android:id="@+id/edit_tall"
+    android:inputType="numberSigned"
+    android:layout_marginStart="10dp"
+    app:layout_constraintBottom_toBottomOf="@id/tall"
+    app:layout_constraintStart_toEndOf="@id/tall"
+    app:layout_constraintTop_toTopOf="@id/tall" />
+
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/weight"
+    android:text="@string/weight"
+    app:layout_constraintLeft_toLeftOf="parent"
+    android:textSize="20sp"
+    android:layout_marginTop="20dp"
+    app:layout_constraintTop_toBottomOf="@id/tall"
+    android:layout_marginStart="30dp" />
+
+  <EditText
+    android:gravity="center"
+    android:hint="kg"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/edit_weight"
+    android:ems="10"
+    android:inputType="numberSigned"
+    android:layout_marginStart="10dp"
+    app:layout_constraintBottom_toBottomOf="@id/weight"
+    app:layout_constraintStart_toEndOf="@id/weight"
+    app:layout_constraintTop_toTopOf="@id/weight" />
+
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/age"
+    android:text="@string/age"
+    app:layout_constraintLeft_toLeftOf="parent"
+    android:textSize="20sp"
+    android:layout_marginTop="20dp"
+    app:layout_constraintTop_toBottomOf="@id/weight"
+    android:layout_marginStart="30dp" />
+
+  <EditText
+    android:gravity="center"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/edit_age"
+    android:ems="10"
+    android:inputType="numberSigned"
+    android:layout_marginStart="10dp"
+    app:layout_constraintBottom_toBottomOf="@id/age"
+    app:layout_constraintStart_toEndOf="@id/age"
+    app:layout_constraintTop_toTopOf="@id/age" />
+
+  <RadioGroup
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/radioGroup"
+    android:orientation="horizontal"
+    app:layout_constraintStart_toStartOf="@id/age"
+    app:layout_constraintTop_toBottomOf="@id/edit_age">
+
+    <RadioButton
+      android:text="@string/boy"
+      android:checked="true"
+      android:id="@+id/boy"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content" />
+
+    <RadioButton
+      android:text="@string/girl"
+      android:id="@+id/girl"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content" />
+
+  </RadioGroup>
+
+  <Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/calculate"
+    android:layout_marginTop="32dp"
+    android:text="@string/calculate"
+    app:layout_constraintStart_toStartOf="@id/age"
+    app:layout_constraintTop_toBottomOf="@id/radioGroup" />
+
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/tv_weight"
+    android:layout_marginStart="32dp"
+    android:text="@string/standard_weight"
+    android:gravity="center"
+    app:layout_constraintBottom_toBottomOf="@id/calculate"
+    app:layout_constraintStart_toEndOf="@id/calculate"
+    app:layout_constraintTop_toTopOf="@id/calculate"/>
+
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/tv_fat"
+    android:layout_marginStart="32dp"
+    android:text="@string/body_fat"
+    android:gravity="center"
+    app:layout_constraintBottom_toBottomOf="@id/tv_weight"
+    app:layout_constraintStart_toEndOf="@id/tv_weight"
+    app:layout_constraintTop_toTopOf="@id/tv_weight"/>
+
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/tv_bmi"
+    android:layout_marginStart="32dp"
+    android:text="@string/bmi"
+    android:gravity="center"
+    app:layout_constraintBottom_toBottomOf="@id/tv_fat"
+    app:layout_constraintStart_toEndOf="@id/tv_fat"
+    app:layout_constraintTop_toTopOf="@id/tv_fat"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
