--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,26 @@
   android:layout_height="match_parent"
   tools:context=".MainActivity">
   <TextView
-    android:id="@+id/helloWorld"
+    android:layout_marginBottom="100dp"
+    android:textSize="28sp"
+    android:textStyle="bold"
+    android:id="@+id/dinner"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World!!!!!!"
+    android:text="@string/eatDinner"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
+
+  <ImageView
+    android:id="@+id/food"
+    android:layout_width="80dp"
+    android:layout_height="80dp"
+    android:src="@drawable/food"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/dinner"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
