--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,12 @@
   android:layout_height="match_parent"
   tools:context=".MainActivity">
   <TextView
-    android:id="@+id/helloWorld"
+    android:textStyle="bold"
+    android:textSize="28sp"
+    android:id="@+id/snackBar"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World!!!!!!"
+    android:text="SnackBar"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
